# basicCmake

./: CMakeLists.txt  README.md
